# ts7670-utils-linux4.x

./: configure.ac
scripts/: eMMC_post  prep_customer_image  prep_stock_image
src/: .gitignore  Makefile.am  gpiolib.c  gpiolib.h  i2c-rtc.c  i2c-rtc.h  pwmlib.c  pwmlib.h  tshwctl.c  tsmicroctl.c
